before looping left side aside - home page

--- a/css/style.scss
+++ b/css/style.scss
@@ -1491,24 +1491,29 @@ section#page-top{
     background-color: #000;
     .page-top-nav{
         border:0px solid #fff;
-        .leftDiv{
-            font-size: 14px;
-            color : #fff;
-            display: flex;
-            align-items: center;
-        }
-        .rightDiv ul li:not(:first-child) a::before {
-            content: '|';
-            padding-right: 10px;
-        }
-        .rightDiv ul li
-        {
-            padding-left: 0px;
-            a
+
+        .content-wrapper{
+
+            .leftDiv{
+                font-size: 14px;
+                color : #fff;
+
+            }
+
+            .rightDiv ul li
             {
-                font-size : 12px;
-                color     : #fff;
-                padding   : 5px 10px 5px 0px;
+                padding-left: 0px;
+                a
+                {
+                    font-size : 12px;
+                    color     : #fff;
+                    padding   : 5px 10px 5px 0px;
+                }
+
+                &:not(:first-child) a::before {
+                    content: '|';
+                    padding-right: 10px;
+                }
             }
         }
     }
@@ -1729,9 +1734,22 @@ section#navigation-div{
                         .snippet-content-div{
                             padding: 10px 0px;
                             .snippet-wrapper-div{
-                                h3{
-                                    text-align: center;
+
+                                .heading-wrapper{
+                                    .heading{
+                                        background-color: #000;
+                                        color : #fff;
+                                        padding: 5px 0px;
+                                        text-align: center;
+                                        margin-bottom: 10px;
+                                        h3{
+                                            margin-bottom: 0px;
+                                        }
+                                    }
                                 }
+
+
+
                                 @include left-and-right-border;
                                 .snippet-container{
                                     position : relative;
@@ -1743,7 +1761,7 @@ section#navigation-div{
                                     padding: 5px;
                                     margin-bottom: 10px;
                                     p.snippet-text{
-                                        margin: 0 0 20px;
+                                        margin: 0 0 27px;
 
                                     }
                                     .read-more-link{
@@ -1831,8 +1849,17 @@ section#navigation-div{
                                             padding: 5px 0px;
                                             text-align: center;
                                             margin-bottom: 10px;
+                                            border-bottom: 3px solid #ea6f2b;
                                             h3{
                                                 margin-bottom: 0px;
+                                                a{
+                                                    text-decoration: none;
+                                                    font-weight: bold;
+
+                                                    &:hover{
+                                                        color:#fff;
+                                                    }
+                                                }
                                             }
                                         }
                                     }
@@ -1856,10 +1883,20 @@ section#navigation-div{
 
 
                     section.normal-feature-news-container{
+                        margin-bottom: 10px;
+                        .normal-feature-wrapper{
+                            //border-top : 1px solid #666;
 
-                        .normal-feature-content-div{
+                            &:first-of-type{
+                                border-top: 0px solid #666;
+                            }
+                            border-bottom: 1px solid #666;
                             padding: 10px 0px;
-                            .normal-feature-wrapper{
+
+                            .normal-feature-wrapper-inside{
+                                //padding-top: 10px;
+                                //padding-bottom: 10px;
+                                //border-top:1px solid #666;
                                 @include left-and-right-border;
                                 .normal-news-feature-div{
                                     margin-bottom: 10px;
@@ -1895,43 +1932,64 @@ section#navigation-div{
                                     .snippet-container{
                                         position : relative;
                                         font-size: 12px;
-                                        h4{
+                                        .snippet-heading{
                                             text-align: center;
-                                        }
-                                        border: 1px solid;
-                                        padding: 5px;
-                                        margin-bottom: 10px;
-                                        p.snippet-text{
-                                            margin: 0 0 30px;
+                                            padding: 5px;
+                                            background-color: #000;
+                                            h4{
+                                                text-align: center;
+                                                margin-bottom: 0px;
+                                                a{
+                                                    text-decoration: none;
+                                                    font-weight: bold;
 
-                                        }
-                                        .read-more-link{
-                                            position: absolute;
-                                            right : 3px;
-                                            bottom: 7px;
-                                            a{
-                                                color: #000;
-                                                border: 1px solid#000;
-                                                background: #fff;
-                                                /* float: left; */
-                                                padding: 5px 10px;
-                                                text-decoration: none !important;
-                                                &:hover{
-                                                    //float: left;
-                                                    //padding: 5px 10px;
-                                                    color: #fff;
-                                                    //border: 1px solid#000;
-                                                    background: #000;
-
+                                                    &:hover{
+                                                        color:#fff;
+                                                    }
                                                 }
                                             }
                                         }
+
+                                        border: 1px solid;
+                                        margin-bottom: 10px;
+
+                                        .snippet-content{
+                                            padding: 0px 5px 30px 5px;
+
+                                            p.snippet-text{
+                                                margin: 0 0 30px;
+                                                text-align: justify;
+
+                                            }
+                                            .read-more-link{
+                                                position: absolute;
+                                                right : 3px;
+                                                bottom: 7px;
+                                                a{
+                                                    color: #000;
+                                                    border: 1px solid#000;
+                                                    background: #fff;
+                                                    /* float: left; */
+                                                    padding: 5px 10px;
+                                                    text-decoration: none !important;
+                                                    &:hover{
+                                                        //float: left;
+                                                        //padding: 5px 10px;
+                                                        color: #fff;
+                                                        //border: 1px solid#000;
+                                                        background: #000;
+
+                                                    }
+                                                }
+                                            }
+                                        }
+
                                     }
 
                                     .read-more-link{
                                         position: absolute;
-                                        right : 15px;
-                                        bottom: 15px;
+                                        right : 0px;
+                                        bottom: 10px;
                                         a{
                                             color: #000;
                                             border: 1px solid#000;
@@ -1965,25 +2023,31 @@ section#navigation-div{
                                         margin-bottom: 10px;
                                         h3{
                                             margin-bottom: 0px;
+                                            a{
+                                                text-decoration: none;
+                                                font-weight: bold;
+
+                                                &:hover{
+                                                    color:#fff;
+                                                }
+                                            }
                                         }
                                     }
                                 }
-
-
-
-
-
-
                             }
+
+
+                            //
+                            //
+                            //
+
+
+
+
+
                         }
 
-                        border-top:1px solid #666;
 
-
-                        &:last-of-type{
-                            //@include top-and-down-border;
-                            border-bottom: 1px solid #666;
-                        }
                     }
 
 
@@ -1994,8 +2058,277 @@ section#navigation-div{
             }
         }
     }
+
 }
 
 
+
+section.home-page-category-news-section{
+    background-color: #fff;
+    border-bottom: 1px solid #666;
+
+
+    &.last{
+        border-bottom: 0px solid #666;
+    }
+
+    .home-page-category-news-section-row{
+        padding : 10px 0px;
+        .content-div-wrapper{
+            @include top-and-down-border;
+
+            padding:10px 0px;
+            .home-page-category-news-section-div.content-div{
+                @include left-and-right-border;
+                position: relative;
+                padding-bottom: 30px;
+                .category-feature-heading-wrapper{
+                    .category-feature-heading{
+                        background-color: #000;
+                        color : #fff;
+                        padding: 5px 0px;
+                        text-align: center;
+                        margin-bottom: 10px;
+                        h3{
+                            //margin-bottom: 0px;
+                            a{
+                                text-decoration: none;
+                                font-weight: bold;
+
+                                &:hover{
+                                    color:#fff;
+                                }
+                            }
+                        }
+                    }
+                    .category-feature-heading-img{
+                        min-height: 50px;
+                        background-size: cover;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+
+
+                    }
+                }
+
+                .row{
+                    margin-bottom: 10px;
+                    .snippet-container{
+                        border : 1px solid #666;
+
+                        position: relative;
+                        .snippet-heading{
+                            text-align: center;
+                            padding: 5px;
+                            background-color: #000;
+                            h4{
+                                margin-bottom: 0px;
+                                a{
+                                    text-decoration: none;
+                                    font-weight: bold;
+                                    &:hover{
+                                        color:#fff;
+
+                                    }
+
+                                }
+                            }
+                        }
+
+                        .snippet-content{
+                            padding: 0px 5px 30px 5px;
+                            .snippet-text-div{
+
+                                p.snippet-text{
+                                    text-align: justify;
+                                }
+                            }
+
+                            &:last-of-type{
+                                margin-bottom: 0px;
+                            }
+                        }
+
+                    }
+                }
+
+                .read-more-link{
+                    position: absolute;
+                    right : 3px;
+                    bottom: 7px;
+                    //display: none;
+                    a{
+                        color: #000;
+                        border: 1px solid#000;
+                        background: #fff;
+                        //float: left;
+                        padding: 5px 10px;
+                        text-decoration: none !important;
+                        &:hover{
+                            //float: left;
+                            //padding: 5px 10px;
+                            color: #fff;
+                            //border: 1px solid#000;
+                            background: #000;
+
+
+                        }
+                    }
+                }
+            }
+
+
+
+        }
+    }
+}
+
+
+
+
+footer{
+    background-color: #ea6f2b !important;
+    color: #000;
+    border-top: 2px solid #000;
+
+    .row{
+        padding-bottom: 15px;
+        padding-top: 15px;
+        .list-div{
+
+            &:not(:last-of-type) .menu-wrapper{
+                border-right : 1px solid #000;
+            }
+
+
+
+
+            @extend .nopadding;
+            .content-wrapper{
+
+                //.content{
+                    .menu-wrapper-parent{
+                        padding:10px 0px;
+
+                        .menu-wrapper{
+                            padding:0px 15px;
+                            //border-right : 1px solid #000;
+
+
+
+                            ul.menu{
+                                padding-left: 0px;
+                                margin-bottom: 0px;
+                                list-style: none;
+                                //@include left-and-right-border;
+                                border-color: #000;
+                                li{
+                                    a{
+                                        color: #000;
+                                        text-decoration: none;
+                                        font-weight: bold;
+                                        font-size: 12px;
+
+                                        &:hover{
+                                            color:#fff;
+                                        }
+                                    }
+
+                                }
+                            }
+                        }
+                    }
+
+                    .footer-list-heading-wrapper{
+                        padding:0px 15px;
+                        .footer-list-heading{
+                            background-color: #000;
+                            color : #fff;
+                            padding: 5px 0px;
+                            text-align: center;
+                            margin-bottom: 0px;
+                            h3{
+                                margin-bottom: 0px;
+                            }
+                        }
+                    }
+                //}
+            }
+        }
+    }
+
+}
+
+
+section#copywrite{
+    background-color: #000;
+
+
+
+
+    .page-top-nav{
+        border:0px solid #fff;
+        .copywrite-content{
+            padding: 5px 0px;
+
+            .leftDiv{
+                font-size: 12px;
+                color : #fff;
+                text-align: left;
+            }
+
+            .rightDiv
+            {
+                font-size: 12px;
+                color : #fff;
+                text-align: right;
+            }
+        }
+    }
+
+}
+
+
+
+
+
+
+.back-top {
+
+    position: fixed;
+    right: 20px;
+    bottom: 35px;
+    background: #000;
+    z-index: 11111;
+
+    a, a:link, a:visited {
+         width: 42px;
+         height: 42px;
+         text-align: center;
+         display: block;
+         color: #fff;
+        border: 2px solid #000;
+         span i.fa.fa-angle-up.fa-2x {
+            padding-top: 6px;
+         }
+
+         &:hover{
+             color: #000;
+             background: #ea6f2b;
+             border: 2px solid #000;
+         }
+    }
+
+    &:link, &:visited {
+        width: 42px;
+        height: 42px;
+        text-align: center;
+        display: block;
+        color: #fff;
+        span i.fa.fa-angle-up.fa-2x {
+        padding-top: 6px;
+        }
+    }
+}
 
 
