--- a/css/style.scss
+++ b/css/style.scss
@@ -60,12 +60,6 @@ h6 {
     margin-bottom: 0px;
 }
 
-.h1,
-h1 {
-    font-size: 36px;
-    line-height: 40px;
-}
-
 p {
     margin: 0 0 10px;
 }
@@ -149,34 +143,41 @@ $def-font-color: #4a4949;
 
 /* 2. typography */
 
+.h1,
+h1 {
+    font-size: 38px;
+    line-height: 32px;
+}
+
 .h2,
 h2 {
-    font-size: 30px;
-    line-height: 34px;
+    font-size: 22px;
+    line-height: 24px;
+
 }
 
 .h3,
 h3 {
-    font-size: 24px;
-    line-height: 28px;
-}
-
-.h4,
-h4 {
     font-size: 18px;
     line-height: 22px;
 }
 
-.h5,
-h5 {
+.h4,
+h4 {
     font-size: 14px;
     line-height: 18px;
 }
 
-.h6,
-h6 {
+.h5,
+h5 {
     font-size: 12px;
     line-height: 16px;
+}
+
+.h6,
+h6 {
+    font-size: 10px;
+    line-height: 14px;
 }
 
 
@@ -1323,25 +1324,25 @@ a.label:hover {
 
 /* Owls on required devices only / synced Owl sample - remove below this line */
 
-#carousel-on-devices .item h4,
-#big-images .item h4,
-#thumbs .item h4 {
+#carousel-on-devices .item h3,
+#big-images .item h3,
+#thumbs .item h3 {
     color: #FFF;
     background: #f58220;
     padding: 10rem 0;
     text-align: center;
 }
 
-#carousel-on-devices .owl-item h4 {
+#carousel-on-devices .owl-item h3 {
     margin: 0;
 }
 
-#big-images .item h4 {
+#big-images .item h3 {
     padding: 15rem 0;
     margin: 0;
 }
 
-#thumbs .item h4 {
+#thumbs .item h3 {
     padding: 3rem 0;
     margin-top: 1px;
     margin-bottom: 0;
@@ -1679,7 +1680,7 @@ section#page-top{
                 //border-style: solid;
                 //border-width: 1px 0px 1px 0px;
                 //border-color: #666;
-                padding : 10px 0px;
+                padding : 5px 0px;
                 div:not(:last-of-type){
                     border-right: 1px solid;
 
@@ -1697,7 +1698,7 @@ section#page-top{
                 //border-style : solid;
                 //border-width : 1px 0px 1px 0px;
                 //border-color : #666;
-                padding      : 10px 0px;
+                padding      : 5px 0px;
                 div:not(:last-of-type)
                 {
                     border-right : 1px solid;
@@ -1707,16 +1708,72 @@ section#page-top{
         }
 
         .logo-div{
+            font-weight: bold;
+            font-size: 16px;
             .content-div
             {
                 padding      : 10px 0px;
-                div:not(:last-of-type){
+                > div:not(:last-of-type){
                     border-right: 1px solid;
 
                     div{
                         //border:1px solid blue;
                     }
                 }
+
+                .social-container{
+
+                }
+                .enewsPaperDiv{
+
+                    .para{
+                        p{
+                            text-align: right;
+                        }
+                    }
+                    .imgDiv{
+                        float: right;
+                        a{
+                            img{
+
+                            }
+                        }
+                    }
+
+                    .e-paper-btn-wrapper{
+                        position: relative;
+                        .e-paper-btn{
+
+                            display: inline-block;
+                            position: absolute;
+                            right: 0px;
+                            top: 10px;
+                            a{
+                                font-size: 18px;
+                                padding: 5px 60px;
+                                border-radius: 4px;
+                                color: #fff;
+                                background-image: linear-gradient(to right, #f58220 0, #f58220c2 51%, #f58220 100%);
+                                transition: all .5s ease;
+                                text-decoration: none;
+                            }
+                        }
+                    }
+
+
+
+
+                }
+                .lakbimaLogoDiv{
+                    padding: 0px 30px;
+                    h1{
+                        display: block;
+                        position: relative;
+                        /* top: 10px; */
+                        text-align: center;
+                    }
+                }
+
 
             }
 
@@ -1880,7 +1937,12 @@ section#navigation-div{
                             padding: 10px 0px;
                             .snippet-wrapper-div{
                                 position: relative;
-                                padding-bottom: 30px;
+                                padding-bottom: 35px;
+
+                                .row{
+                                    margin-bottom: 10px;
+                                }
+
                                 .heading-wrapper{
                                     .heading{
                                         background-color: #000;
@@ -1889,7 +1951,7 @@ section#navigation-div{
                                         text-align: center;
                                         margin-bottom: 10px;
                                         border-bottom: 3px solid #ea6f2b;
-                                        h3{
+                                        h2{
                                             margin-bottom: 0px;
                                             a{
                                                 text-decoration: none;
@@ -1918,7 +1980,7 @@ section#navigation-div{
                                         text-align: center;
                                         padding: 5px;
                                         background-color: #000;
-                                        h4{
+                                        h3{
                                             //text-align: center;
                                             a{
                                                 text-decoration: none;
@@ -2110,7 +2172,7 @@ section#navigation-div{
                                                         }
 
                                                         .heading{
-                                                            h4{
+                                                            h3{
                                                                 color: #f58220;
                                                             }
                                                         }
@@ -2132,7 +2194,7 @@ section#navigation-div{
 
 
                                                     .heading{
-                                                        h4{
+                                                        h3{
                                                             font-size: 16px;
                                                             font-weight: bold;
                                                             color: #000;
@@ -2228,7 +2290,7 @@ section#navigation-div{
                                                     text-align: center;
                                                     padding: 5px;
                                                     background-color: #000;
-                                                    h4 a {
+                                                    h3 a {
                                                         text-decoration: none;
                                                         font-weight: bold;
                                                         &:hover {
@@ -2380,7 +2442,7 @@ section#navigation-div{
                                                         }
 
                                                         .heading{
-                                                            h4{
+                                                            h3{
                                                                 color: #f58220;
                                                             }
                                                         }
@@ -2400,7 +2462,7 @@ section#navigation-div{
 
 
                                                     .heading{
-                                                        h4{
+                                                        h3{
                                                             font-size: 16px;
                                                             font-weight: bold;
                                                             color: #000;
@@ -2474,7 +2536,7 @@ section#navigation-div{
                                                         }
 
                                                         .heading{
-                                                            h4{
+                                                            h3{
                                                                 color: #f58220;
                                                             }
                                                         }
@@ -2494,7 +2556,7 @@ section#navigation-div{
 
 
                                                     .heading{
-                                                        h4{
+                                                        h3{
                                                             font-size: 14px;
                                                             font-weight: bold;
                                                             color: #000;
@@ -2567,7 +2629,7 @@ section#navigation-div{
                                                         }
 
                                                         .heading{
-                                                            h4{
+                                                            h3{
                                                                 color: #f58220;
                                                             }
                                                         }
@@ -2588,7 +2650,7 @@ section#navigation-div{
 
 
                                                     .heading{
-                                                        h4{
+                                                        h3{
                                                             font-size: 12px;
                                                             font-weight: bold;
                                                             color: #000;
@@ -2682,7 +2744,7 @@ section#navigation-div{
                                             text-align: center;
                                             margin-bottom: 10px;
                                             border-bottom: 3px solid #ea6f2b;
-                                            h3{
+                                            h2{
                                                 margin-bottom: 0px;
                                                 a{
                                                     text-decoration: none;
@@ -2780,7 +2842,7 @@ section#navigation-div{
                                                 text-align       : center;
                                                 padding          : 5px;
                                                 background-color : #000;
-                                                h4
+                                                h3
                                                 {
                                                     text-align    : center;
                                                     margin-bottom : 0px;
@@ -2899,7 +2961,7 @@ section#navigation-div{
                                         text-align: center;
                                         margin-bottom: 10px;
                                         border-bottom: 3px solid #ea6f2b;
-                                        h3{
+                                        h2{
                                             margin-bottom: 0px;
                                             a{
                                                 text-decoration: none;
@@ -2969,7 +3031,7 @@ section.home-page-category-news-section{
                         text-align: center;
                         margin-bottom: 10px;
                         border-bottom: 3px solid #ea6f2b;
-                        h3{
+                        h2{
                             //margin-bottom: 0px;
                             a{
                                 text-decoration: none;
@@ -3001,7 +3063,7 @@ section.home-page-category-news-section{
                             text-align: center;
                             padding: 5px;
                             background-color: #000;
-                            h4{
+                            h3{
                                 margin-bottom: 0px;
                                 a{
                                     text-decoration: none;
@@ -3209,7 +3271,7 @@ footer{
                             padding: 5px 0px;
                             text-align: center;
                             margin-bottom: 0px;
-                            h3{
+                            h2{
                                 margin-bottom: 0px;
                             }
                         }
